[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/Object_Pack/1_lv/stairs.png" type="Texture" id=1]
[ext_resource path="res://art/Map/1_lv/stairs.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 219.314

[node name="Node2D" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2( 8.00903, 109.457 )
polygon = PoolVector2Array( 48.2639, -105.231, -53.1839, -95.8868, -115.921, -65.8529, -137.946, -27.81, -163.308, 14.2375, -123.93, 23.5814, -27.1545, 18.242, 51.601, -2.448, 113.004, -30.4796, 89.644, -83.8732 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.66968, 112.127 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 0, 108.122 )
polygon = PoolVector2Array( 44.9268, -103.896, -47.8445, -93.8845, -101.238, -77.199, -123.263, -45.1629, -149.96, -3.11542, -123.263, 17.5746, -29.8242, 21.5791, 26.2391, 13.5701, 66.9517, -11.1245, 109.667, -26.4751, 109.667, -54.5068, 84.972, -89.88, 65.6168, -95.2194 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -21.3815, 69.4901 )
shape = SubResource( 1 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
